# MCP-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
soil_health_agent/: agent.py  prompt.py  tools.py
